syntax = "proto3";

option go_package = "./;auth";

package auth;

service AuthService {
    rpc Register (RegisterRequest) returns (User);  
    rpc Login (LoginRequest) returns (User);
    rpc CheckSession (CheckSessionRequest) returns (User);
    rpc Logout (LogoutRequest) returns (Empty);
    rpc CreateSession (CreateSessionRequest) returns (CreateSessionResponse);
    rpc DeleteSession (DeleteSessionRequest) returns (Empty);

    }

      message RegisterRequest {
        string username = 1;
        string email = 2;
        string password = 3;
        //string avatar = 4; 
    }


    message LoginRequest {
        string username = 1;
        string password = 2;
    }

    message CheckSessionRequest {
        int32 ID = 1;
    }
    
    message User {
        int32 ID = 1;
        string username = 2;
        string email = 3;
        string avatar_url = 4;
    }

    message LogoutRequest{
        string token = 1;
    }

    message Empty{}

    message CreateSessionRequest{
        int32 ID = 1;
    }

    message CreateSessionResponse{
        int32 UserID = 1;
        string Token = 2;
        string Expires = 3;
    }
    
    message DeleteSessionRequest{
        string Token = 1;
    }